Updat RoleControllerTest with new tests and assertions