@@ -5,11 +5,14 @@ import com.LibraryManagementSystem.LMS.domain.Role;
 import com.LibraryManagementSystem.LMS.dto.AddRoleDto;
 import com.LibraryManagementSystem.LMS.dto.ReturnRoleDto;
 import com.LibraryManagementSystem.LMS.exceptions.RoleAlreadyExistsException;
+import com.LibraryManagementSystem.LMS.exceptions.RoleNotFoundException;
 import com.LibraryManagementSystem.LMS.repositories.RoleRepository;
 import com.LibraryManagementSystem.LMS.services.RoleService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -22,11 +25,13 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 @SpringBootTest
 @ExtendWith(SpringExtension.class)
@@ -43,7 +48,7 @@ public class RoleControllerTest {
     @Autowired
     private TestDataUtil testDataUtil;
 
-    @Autowired
+    @MockBean
     private RoleRepository roleRepository;
 
     @MockBean
@@ -51,57 +56,74 @@ public class RoleControllerTest {
 
     @Test
     public void testThatAddRoleReturnHttp201CreatedWhenAddedSuccessfully() throws Exception {
-        AddRoleDto addRoleDto = AddRoleDto.builder().name("ROLE_ADMIN").build();
+        Role role = Role.builder().id(1L).name("ROLE_LIBRARIAN").build();
 
-        String roleJson = objectMapper.writeValueAsString(addRoleDto);
+        when(roleRepository.save(role)).thenReturn(role);
 
-        mockMvc.perform(
-                post("/api/roles")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(roleJson)
-        ).andExpect(
-                status().isCreated()
+        String roleJson = objectMapper.writeValueAsString(role);
+
+        var result = mockMvc.perform(post("/api/roles")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(roleJson)
         );
+
+        result.andExpect(status().isCreated());
     }
 
     @Test
     public void testThatAddRoleReturnHttp409ConflictWhenRoleExist() throws Exception {
-        AddRoleDto addRoleDto = AddRoleDto.builder().name("ROLE_MEMBER").build();
+        AddRoleDto role = AddRoleDto.builder().name("ROLE_LIBRARIAN").build();
 
-        doThrow(new RoleAlreadyExistsException("Role with name: ROLE_MEMBER already exists"))
+        doThrow(new RoleAlreadyExistsException("Role with name: ROLE_LIBRARIAN already exists"))
                 .when(roleService).addNewRole(any(AddRoleDto.class));
 
-        String roleJson = objectMapper.writeValueAsString(addRoleDto);
+        String roleJson = objectMapper.writeValueAsString(role);
 
-        mockMvc.perform(
-                MockMvcRequestBuilders.post("/api/roles")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(roleJson)
-        ).andExpect(
-                MockMvcResultMatchers.status().isConflict()
+        var result = mockMvc.perform(post("/api/roles")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(roleJson)
         );
+
+        result.andExpect(status().isConflict());
     }
 
     @Test
-    public void testThatGetRolesReturned200OkWhenGetRolesSuccess() throws Exception {
+    public void testThatGetRolesReturns200OkWhenGetRolesSuccess() throws Exception {
         ReturnRoleDto addRoleDto1 = ReturnRoleDto.builder().name("ROLE_ADMIN").build();
         ReturnRoleDto addRoleDto2 = ReturnRoleDto.builder().name("ROLE_MEMBER").build();
 
-        List<ReturnRoleDto> roles = Arrays.asList(addRoleDto1, addRoleDto2);
+        when(roleService.findAll()).thenReturn(List.of(addRoleDto1, addRoleDto2));
 
-        when(roleService.findAll()).thenReturn(roles);
+        var result = mockMvc.perform(get("/api/roles"));
 
-        mockMvc.perform(
-                MockMvcRequestBuilders.get("/api/roles")
-                        .contentType(MediaType.APPLICATION_JSON)
-        ).andExpect(
-                status().isOk()
-        ).andExpect(
-                MockMvcResultMatchers.jsonPath("$.length()").value(roles.size())
-        ).andExpect(
-                MockMvcResultMatchers.jsonPath("$[0].name").value("ROLE_ADMIN")
-        ).andExpect(
-                MockMvcResultMatchers.jsonPath("$[1].name").value("ROLE_MEMBER")
-        );
+        result.andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].name").value("ROLE_ADMIN"))
+                .andExpect(jsonPath("$[1].name").value("ROLE_MEMBER"));
+    }
+
+    @Test
+    public void testThatGetRoleByIdReturns200OkWhenRoleExist() throws Exception {
+        ReturnRoleDto role = ReturnRoleDto.builder().id(1L).name("ROLE_ADMIN").build();
+
+        when(roleService.findRoleById(1L)).thenReturn(role);
+
+        var result = mockMvc.perform(get("/api/roles/1"));
+
+        result.andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.name").value("ROLE_ADMIN"))
+                .andExpect(jsonPath("$.id").value(1L));
+    }
+
+    @Test
+    public void testThatGetRoleByIdReturns404NotFoundWhenRoleDoesNotExist() throws Exception {
+        Long roleId = 999L;
+        String errorMessage = "Role with id: " + roleId + " does not exist";
+
+        when(roleService.findRoleById(roleId)).thenThrow(new RoleNotFoundException(errorMessage));
+
+        var result = mockMvc.perform(get("/api/roles/{roleId}", roleId)) ;
+
+        result.andExpect(status().isNotFound());
     }
 }
